# factory

./: .gitignore  CLAUDE.md  Containerfile  Makefile  README.md  docker-compose.yaml  go.mod  go.sum
.konflux/: README.md  application.yaml  component-workqueue.yaml  imagerepository-workqueue.yaml
.tekton/: README.md  workqueue-build-pr.yaml  workqueue-build-push.yaml  workqueue-fuzz.yaml  workqueue-pull-request.yaml  workqueue-push.yaml
core/: ARCHITECTURE.md  CONTRIBUTING.md  Makefile  README.md  SDK.md  SECURITY.md  TESTING.md  e2e_output_test.go  e2e_test.go  fanin_test.go  (+9 more)
sdk/python/: README.md  pyproject.toml
sdk/python/src/factory_workqueue/: __init__.py  _duration.py  client.py  enqueue.py  errors.py  reconciler.py
sdk/python/tests/: test_client.py  test_conformance.py  test_duration.py  test_enqueue.py
services/vuln-match/: .gitignore  Containerfile  Containerfile.dev  README.md  advisory.py  enrich_with_agent.py  mappings.json  match.py  propose_mappings.py  pyproject.toml
services/vuln-match/data/: srpm_descriptions.json
services/vuln-match/deploy/kubernetes/base/: api.yaml  kustomization.yaml  matcher.yaml  syncer.yaml  triage.yaml
services/vuln-match/docs/: DESIGN.md
services/vuln-match/src/vuln_match/: cli.py  config.py
services/vuln-match/src/vuln_match/agent/: enricher.py  prompts.py  tools.py
services/vuln-match/src/vuln_match/api/: server.py
services/vuln-match/src/vuln_match/db/: pool.py
services/vuln-match/src/vuln_match/db/migrations/: 001_initial.sql
services/vuln-match/src/vuln_match/feed/: osv.py
services/vuln-match/src/vuln_match/match/: cpe_index.py  name_resolver.py  reconciler.py  version_matcher.py
services/vuln-match/src/vuln_match/store/: postgres.py
services/vuln-match/src/vuln_match/syncer/: syncer.py  triage.py
services/vuln-match/tests/: conftest.py  test_agent_tools.py  test_api.py  test_enricher.py  test_name_resolver.py  test_osv_feed.py  test_reconciler.py  test_store.py  test_version_matcher.py
services/vuln-match/tests/fixtures/: agent_review_curl.json  agent_review_openssl.json
services/vuln-match/tests/integration/: test_agent_integration.py  test_judge.py
workqueue/sdk/rust/: Cargo.toml
workqueue/sdk/rust/src/: client.rs  enqueue.rs  lib.rs  reconciler.rs  types.rs
(+598 files in other folders)
