[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "factory-workqueue"
version = "0.1.0"
description = "Python SDK for the Factory Workqueue platform"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = ["httpx>=0.27", "uvicorn>=0.30"]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "mypy>=1.11",
    "ruff>=0.7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/factory_workqueue"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
strict = true

[tool.ruff]
target-version = "py311"
