[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vuln-match"
version = "0.1.0"
description = "Hummingbird CVE-to-RPM matching and advisory generation service"
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary,pool]>=3.1",
    "httpx>=0.27",
    "anthropic[vertex]>=0.42",
    "pyyaml>=6.0",
    "packaging>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[project.scripts]
vuln-match-matcher = "vuln_match.cli:run_matcher"
vuln-match-syncer = "vuln_match.cli:run_syncer"
vuln-match-api = "vuln_match.cli:run_api"

[tool.hatch.build.targets.wheel]
packages = ["src/vuln_match"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
