[package]
name = "factory-workqueue"
version = "0.1.0"
edition = "2024"
description = "Rust SDK for the Factory Workqueue platform"
license = "Apache-2.0"

[features]
default = ["axum-handler"]
axum-handler = ["dep:axum", "tokio/rt-multi-thread"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls-tls"] }
axum = { version = "0.8", optional = true }
tokio = { version = "1", features = ["time"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"

[dev-dependencies]
wiremock = "0.6"
tokio = { version = "1", features = ["full", "test-util"] }
